[package]
name = "thud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
gethostname = "0.4.3"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
socketioxide = "0.7.1"
tokio = { version = "1.12.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
